--- a/src/index.css
+++ b/src/index.css
@@ -43,17 +43,39 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
   margin: 5px 10px;
+  outline: none;
 }
 button:hover {
   border-color: #646cff;
+  outline: none;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+input {
+  border-radius: 10px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  margin: 5px 10px;
+  transition: border-color 0.25s;
+  background-color: #d3d3d326;
+  outline: none;
+}
+input:hover {
+  border-color: #646cff;
+  outline: none;
+}
+input:focus,
+input:focus-visible {
+  outline: 2px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
